modified:   app/src/main/kotlin/com/github/gotify/messages/ListMessageAdapter.kt 	new file:   app/src/main/res/drawable/expand_button_background.xml 	modified:   app/src/main/res/layout/message_item.xml 	modified:   app/src/main/res/layout/message_item_compact.xml 	modified:   app/src/main/res/values-notnight/colors.xml 	modified:   app/src/main/res/values/colors.xml 	modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,7 +130,7 @@
     <string name="notification_channel_title_low">低优先级消息 (1–3)</string>
     <string name="notification_channel_title_normal">普通优先级消息 (4–7)</string>
     <string name="notification_channel_title_high">高优先级消息 (&gt;7)</string>
-    <string name="setting_key_prompt_onreceive_intent">接收意图时提示的键</string>
-    <string name="setting_prompt_onreceive_intent">接收意图时提示</string>
-    <string name="setting_summary_prompt_onreceive_intent">在接收到意图时显示提示</string>
+    <string name="expand_message">展开</string>
+    <string name="collapse_message">折叠</string>
+    <string name="show_more">显示更多</string>
 </resources>
